# auth

./: Dockerfile  README.md  pyproject.toml
auth/: config.py  main.py
auth/app/: JWTBearer.py  auth.py  verify_signature.py
auth/routers/: auth.py
tests/: conftest.py  test_api.py  test_auth.py  test_jwt.py
