[tool.poetry]
name = "rddl-auth"
version = "0.2.0"
description = ""
authors = ["Jürgen Eckel <juergen@riddleandcode.com>"]
readme = "README.md"
packages = [{include = "auth"}]

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.6"
fastapi = "^0.109.1"
uvicorn = "^0.20.0"
pyjwt = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.7"
ecdsa = "^0.18.0"


[tool.poetry.group.dev.dependencies]
black = {version = "23.3.0", extras = ["colorama"]}
pytest = "^7.2.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
